style.css
/* ... */
/* main content, all pages */
main {
    grid-area: 3 / 2 / 4 / 4;
    padding: 2rem;
    padding-top: 1rem;
    padding-left: 1.5rem;
    border-top: 2px solid var(--secondary);
    height: 100%;
}

main h2 {
    margin-bottom: 2px;
    text-align: center;
}

main h2:nth-child(n + 2) {
    margin-top: 0.8rem;
}

main p {
    text-indent: 1rem;
    margin: 0.5rem 0 1.3rem 0;
    padding-left: 0.8rem;
    border-left: 2px solid var(--accentOne);
    font-size: 0.85rem;
}

main p a {
    text-decoration: none;
}

main p code {
    text-shadow: 1px 1px 1px rgb(0, 0, 0);
    letter-spacing: 1px;
    font-size: 0.8rem;
    color: var(--code);
}

/* figure component */
figure {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    float: right;
    margin-left: 0.5rem;
    margin-bottom: 1rem;
}

figure:hover figcaption {
    box-shadow: none;
}

figure.card img {
    width: 13rem;
    border: 4px outset var(--accentOne);
    background-color: var(--primary);
}

figure.card figcaption {
    width: 12rem;
    text-align: center;
    background-color: var(--primary);
    color: var(--secondary);
    padding: 0.5rem;
    border-color: var(--accentOne);
    border-width: 0 4px 4px 4px;
    border-style: outset;
    font-size: 0.8rem;
}

figure.card figcaption a {
    text-decoration: none;
    color: var(--accentOne);
}

/* media queries */
@media screen and (max-width: 1050px) {
    body {
        padding: 0 1rem;
    }

    .container {
        display: flex;
        flex-flow: column wrap;
        margin: 0;
        margin-bottom: 1rem;
    }

    header {
        display: flex;
        flex-flow: row nowrap;
        margin-bottom: 1rem;
    }

    header div:nth-child(2) {
        display: flex;
        flex-flow: column nowrap;
        margin-top: 2rem;
    }

    header div:nth-child(2) img {
        width: 5rem;
    }

    header h1 {
        width: 100%;
    }

    header .logo {
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-between;
    }

    header #themeButton {
        margin: 0;
    }

    nav ul {
        justify-content: center;
        gap: .5rem;
    }

    nav ul li {
        min-width: 25%;
        max-width: 2rem;
    }

    aside {
        display: flex;
        flex-flow: row wrap;
        justify-content: center;
        align-items: center;
        gap: 2rem;
        min-height: 0;
        border-right: none;
        padding: 1rem 0;
        min-width: 0;
    }

    aside .recentPosts {
        display: flex;
        flex-flow: column nowrap;
        justify-content: center;
        align-items: center;
    }

    div.marquee {
        max-width: 20%;
        min-width: 15%;
    }

    div.window {
        top: 45%;
        left: 35%;
    }

    #homeMain figure {
        width: 100%;
        margin: 0 auto;
        margin-bottom: 1rem;
        margin-top: 1rem;
    }
}

@media screen and (max-width: 600px) {
    header h1 {
        font-size: 2.5rem;
    }

    nav ul li {
        max-width: 8rem;
    }

    nav ul li a {
        font-size: .7rem;
    }

    figure#ricostay {
        width: 15rem;
    }
}

@media screen and (max-width: 515px) {
    header h1 {
        font-size: 2rem;
    }
}

@media screen and (max-width: 380px) {
    header h1 {
        font-size: 1.7rem;
    }
}

/* site-wide styles */
p a:visited {
    color: var(--accentOne);
}

p a:not(:visited) {
    color: var(--accentOne);
}

a:hover {
    color: var(--accentOne);
    font-weight: bold;
}

/* homepage */
#mainBottom {
    display: flex;
    width: 100%;
}

.chatbox {
    background-color: var(--accentTwo);
    border: 4px ridge var(--accentOne);
    max-width: 70%;
    height: 13rem;
    flex: 1;
}

.chatbox h3 {
    padding: 0.3rem 0 0.3rem 0.3rem;
    border-bottom: 2px groove var(--accentOne);
}

.chatbox blockquote p {
    border-left: none;
    padding: 0.5rem;
    margin: 0;
    text-indent: 0;
}

#homeMain {
    padding-bottom: 1rem;
}

/* resource page(s) */
.resourceContainer {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
    grid-auto-rows: max-content;
    gap: 1.2rem;
    margin-top: 1rem;
    text-decoration: none;
}

.resourceContainer div {
    color: var(--secondary);
    background: linear-gradient(to bottom right,
            var(--accentOne),
            var(--primary));
    border: 3px ridge var(--accentTwo);
    height: 100%;
    padding: .4rem;
}
.resourceContainer a {
    text-decoration: none;
}

.resourceContainer a:hover div {
    background: linear-gradient(to bottom right,
            var(--primary),
            var(--accentOne));
}

.resourceContainer a div p {
    border: none;
    padding: 0;
    margin: 0;
    text-indent: 0;
    text-align: center;
    margin-bottom: 0.5rem;
}


.resourceGuides {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    gap: .5rem;
    margin-bottom: 1rem;
}

.resourceGuides a div {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--secondary);
    font-size: 1.2rem;
    text-shadow: 2px 2px var(--accentOne);
}

.resourceGuides a:nth-child(1) div {
    background-image: linear-gradient(to right bottom, rgb(0 0 0 / .7), var(--primary)), url('/res/img/resourceHTML.png');
    border: 3px groove var(--accentTwo);
}

.resourceGuides a:nth-child(2) div {
    background-image: linear-gradient(to right bottom, rgb(0 0 0 / .7), var(--primary)), url('/res/img/resourceCSS.png');
    border: 3px groove var(--accentTwo);
}

.resourceGuides a:nth-child(3) div {
    background-image: linear-gradient(to right bottom, rgb(0 0 0 / .7), var(--primary)), url('/res/img/resourceJS.png');
    border: 3px groove var(--accentTwo);
}

.resourceGuides a:nth-child(1) div:hover {
    background-image: linear-gradient(to right bottom, rgb(0 0 0 / .8), var(--primary)), url('/res/img/resourceHTML.png');
}
/* ... */

